inventory/k8s.python279.org/addon-yml/kubernetes-prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector: 
    app: prometheus-server
  ports:
    - port: 8080
      protocol: TCP
      targetPort: prometheus-web
