inventory/k8s.python279.org/addon-yml/kubernetes-prometheus/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.python279.org
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 8080
